<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        android:background="@color/colorActivity"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:weightSum="1">

        <TextView
            style="@style/TextViewtStyle"
            android:text="@string/txt_titulo_usuario_contrasenia"
            android:id="@+id/txt_tutor" />

        <!--Space
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1" /-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07">
        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/txt_usuario"
            android:hint="@string/txt_usuario"
            android:inputType="text"
            android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:counterMaxLength="8"
            >
        <EditText
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:id="@+id/txt_pass"
            android:hint="@string/txt_contrasenia" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:counterMaxLength="8">
        <EditText

            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:id="@+id/txt_passRepetir"
            android:hint="@string/txt_repetir_contrasenia"/>
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />
        <Button
            style="@style/buttonStyle"
            android:id="@+id/btn_guardar"
            android:onClick="guardar"
            android:text="@string/btn_guardar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            />
        <Button

            style="@style/buttonStyle"
            android:id="@+id/btn_cancelar"
            android:onClick="cancelar"
            android:text="@string/btn_cancelar"/>



    </LinearLayout>
</ScrollView>