<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"

        android:background="@color/colorActivity"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:weightSum="1">

        <TextView
            style="@style/TextViewtStyle"
            android:text="@string/txt_titulo_direccion_correo"
            android:id="@+id/txt_tutor" />

        <!--Space
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1" /-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            style="@style/EditTextStyle"
            android:layout_alignRight="@+id/txt_tutor"
            android:layout_alignEnd="@+id/txt_tutor"
            android:inputType="textPostalAddress"
            android:id="@+id/txt_direccion"
            android:hint="@string/txt_direccion"
            android:maxLength="50" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
           style="@style/EditTextStyle"
            android:layout_alignRight="@+id/txt_direccion"
            android:layout_alignEnd="@+id/txt_direccion"
            android:id="@+id/txt_email"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:maxLength="25" />
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />
        <Button
            style="@style/buttonStyle"
            android:id="@+id/btn_siguiente"
            android:onClick="irInterfaz"
            android:text="@string/btn_siguiente"
            />


    </LinearLayout>
</ScrollView>