<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ec.edu.upse.locatemev1.controladores.usuarioTutoriadoControl.perfilUsuarioTutoreado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorActivity"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:weightSum="1">

        <TextView
            style="@style/TextViewtStyle"
            android:text="@string/txt_perfil_usuario"
            android:id="@+id/txtmensajeTutor"
            android:enabled="false"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="49dp">

            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_nombresPerfilUsuario"
                android:inputType="textPersonName"
                android:hint="@string/txt_nombres"
                android:maxLength="25"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout  android:layout_width="match_parent"
            android:layout_height="49dp"
            app:errorEnabled="true">

            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_apellidosPerfilUsuario"
                android:hint="@string/txt_apellidos"
                android:layout_alignRight="@+id/txt_nombresPerfilUsuario"
                android:layout_alignEnd="@+id/txt_nombresPerfilUsuario"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout  android:layout_width="match_parent"
            android:layout_height="49dp"
            app:counterEnabled="true"
            android:id="@+id/til_cedula"
            app:counterOverflowTextAppearance="@style/AppTheme.CharacterCounter">
            <EditText
                style="@style/EditTextStyle"
                android:inputType="numberSigned"
                android:hint="@string/txt_cedula"
                android:id="@+id/txt_cedula"
                android:layout_alignRight="@+id/txt_apellidosPerfilUsuario"
                android:layout_alignEnd="@+id/txt_apellidosPerfilUsuario"
                android:layout_marginTop="40dip"
                android:maxLength="10"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="49dp">
            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_fechaNacimientoPerfil"
                android:hint="@string/txt_fecha_nacimiento"
                android:layout_alignRight="@+id/txt_cedula"
                android:layout_alignEnd="@+id/txt_cedula"
                android:focusable="false"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="49dp">
            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_tipoDiscapacidad"
                android:hint="@string/txt_tipo_discapacidad"
                android:layout_alignRight="@+id/txt_fechaNacimientoPerfil"
                android:layout_alignEnd="@+id/txt_fechaNacimientoPerfil"
                android:inputType="textPersonName"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_editar1"
            style="@style/buttonStyle"
            android:layout_marginTop="40dip"
            android:enabled="true"
            android:onClick="editarDatosGeneralesTutoreado"
            android:text="@string/btn_editar" />

        <TextView
            style="@style/TextViewtStyle"
            android:text="Perfil Usuario"
            android:id="@+id/txtmensaje2"
            android:enabled="false"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="49dp">
            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_usuarioPerfil"
                android:hint="Usuario"
                android:inputType="text"
                android:maxLength="10"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            >
            <EditText
                style="@style/EditTextStyle"
                android:layout_alignRight="@+id/txt_usuarioPerfil"
                android:layout_alignEnd="@+id/txt_usuarioPerfil"
                android:inputType="textPassword"
                android:id="@+id/txt_passPerfilUsuario"
                app:counterMaxLength="8"
                android:hint="@string/txt_contrasenia"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_editarDatosAcceso"
            style="@style/buttonStyle"
            android:layout_marginTop="40dip"
            android:editable="false"
            android:enabled="true"
            android:onClick="editarDatosAccesoTutoreado"
            android:text="@string/btn_editar" />

    </LinearLayout>
</ScrollView>

