<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorActivity"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:weightSum="1">

        <TextView
            style="@style/TextViewtStyle"
            android:text="@string/txt_titulo_nacimiento_celular"
            android:id="@+id/txtTutor" />

        <!--Space
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1" /-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_fechaNacimiento"
                android:hint="@string/txt_fecha_nacimiento"
                android:focusable="false"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="10"
            app:counterOverflowTextAppearance="@style/AppTheme.CharacterCounter">
            <EditText
               style="@style/EditTextStyle"
                android:layout_alignRight="@+id/txt_fechaNacimiento"
                android:layout_alignEnd="@+id/txt_fechaNacimiento"
                android:inputType="phone"
                android:id="@+id/txt_telefono"
                android:hint="@string/txt_telefono"
                android:layout_marginTop="40dip"
                 />
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <Button
            style="@style/buttonStyle"
            android:id="@+id/btn_siguiente"
            android:text="@string/btn_siguiente"
            android:layout_marginTop="40dip"
            android:onClick="irInterfaz"
            />


    </LinearLayout>
</ScrollView>