<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ec.edu.upse.locatemev1.controladores.usuarioTutoriadoControl.datospersonales1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorActivity"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:weightSum="1">

        <TextView
            style="@style/TextViewtStyle"
            android:text="@string/txt_titulo_cedula_nacimiento"
            android:id="@+id/txt_tutor" />

        <android.support.design.widget.TextInputLayout android:layout_height="54dp"
            android:layout_width="match_parent"
            app:counterEnabled="true"
            android:id="@+id/til_cedula"
            app:counterMaxLength="10"
            app:counterOverflowTextAppearance="@style/AppTheme.CharacterCounter">

            <EditText
                android:id="@+id/txt_cedula"
                style="@style/EditTextStyle"
                android:layout_marginTop="40dip"
                android:hint="@string/txt_cedula"
                android:inputType="numberSigned" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_fechaNacimiento"
                android:hint="@string/txt_fecha_nacimiento"
                android:focusable="false"
                android:layout_alignRight="@+id/txt_cedula"
                android:layout_alignEnd="@+id/txt_cedula"
                />
        </android.support.design.widget.TextInputLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />
        <Button
            style="@style/buttonStyle"
            android:id="@+id/btn_siguiente"
            android:onClick="btn_siguiente"
            android:text="@string/btn_siguiente"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            />

    </LinearLayout>
</ScrollView>
