<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ec.edu.upse.locatemev1.controladores.usuarioTutorControl.PerfilUsuarioTutor"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorActivity"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:weightSum="1">

        <TextView
            style="@style/TextViewtStyle"
            android:text="Perfil Tutor"
            android:id="@+id/txtmensajeTutor" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="49dp">

            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_nombresPerfilTutor"
                android:inputType="textPersonName"
                android:hint="@string/txt_nombres"
                android:maxLength="25"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_height="51dp"
            android:layout_width="match_parent"
            app:errorEnabled="true">

            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_apellidosPerfilTutor"
                android:hint="@string/txt_apellidos"
                android:layout_alignRight="@+id/txt_nombresPerfilTutor"
                android:layout_alignEnd="@+id/txt_nombresPerfilTutor"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_height="59dp"
            android:layout_width="match_parent"
            app:counterEnabled="true"
            android:id="@+id/til_cedula"
            app:counterOverflowTextAppearance="@style/AppTheme.CharacterCounter">
            <EditText
                style="@style/EditTextStyle"
                android:inputType="numberSigned"
                android:hint="@string/txt_cedula"
                android:id="@+id/txt_cedula"
                android:layout_alignRight="@+id/txt_apellidosPerfilTutor"
                android:layout_alignEnd="@+id/txt_apellidosPerfilTutor"
                android:layout_marginTop="40dip"
                android:maxLength="10"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/txt_fechaNacimientoPerfil"
                android:hint="@string/txt_fecha_nacimiento"
                android:layout_alignRight="@+id/txt_cedula"
                android:layout_alignEnd="@+id/txt_cedula"
                android:focusable="false"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterOverflowTextAppearance="@style/AppTheme.CharacterCounter">
            <EditText
                style="@style/EditTextStyle"
                android:layout_alignRight="@+id/txt_fechaNacimientoPerfil"
                android:layout_alignEnd="@+id/txt_fechaNacimientoPerfil"
                android:inputType="phone"
                android:id="@+id/txt_telefonoPerfilTutor"
                app:counterMaxLength="10"
                android:hint="@string/txt_telefono"
                android:enabled="false"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/EditTextStyle"
                android:layout_alignRight="@+id/txt_telefonoPerfilTutor"
                android:layout_alignEnd="@+id/txt_telefonoPerfilTutor"
                android:inputType="textPostalAddress"
                android:id="@+id/txt_direccionPerfilTutor"
                android:hint="@string/txt_direccion"
                android:maxLength="50"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/EditTextStyle"
                android:layout_alignRight="@+id/txt_direccionPerfilTutor"
                android:layout_alignEnd="@+id/txt_direccionPerfilTutor"
                android:id="@+id/txt_emailPerfilTutor"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/EditTextStyle"
                android:layout_alignRight="@+id/txt_emailPerfilTutor"
                android:layout_alignEnd="@+id/txt_emailPerfilTutor"
                android:id="@+id/txt_usuarioPerfilTutor"
                android:hint="Usuario"
                android:inputType="text"
                android:maxLength="10"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            >
            <EditText
                style="@style/EditTextStyle"
                android:layout_alignRight="@+id/txt_usuarioPerfilTutor"
                android:layout_alignEnd="@+id/txt_usuarioPerfilTutor"
                android:inputType="textPassword"
                android:id="@+id/txt_passPerfilTutor"
                app:counterMaxLength="8"
                android:hint="@string/txt_contrasenia"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <Button
            style="@style/buttonStyle"
            android:id="@+id/btn_editar"
            android:text="Editar"
            android:onClick="editarPerfilTutor"
            android:layout_marginTop="40dip"
            />

        <TextView
            style="@style/EditTextStyle"
            android:id="@+id/editartutor"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"
            android:enabled="false"/>
    </LinearLayout>

</ScrollView>
