<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maplayaurt"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="67dp"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/btn_punto_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:layout_weight="1"
            android:onClick="punto1"
            android:textColor="@color/colorActivity"
            android:background="@color/colorPrimary"/>

        <Button
            android:text="@string/btn_punto_fin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:layout_weight="1"
            android:onClick="punto2"
            android:textColor="@color/colorActivity"
            android:background="@color/colorPrimary"/>

        <Button
            android:text="@string/btn_distacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:onClick="calculadistancia"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"

            android:textColor="@color/colorActivity"
            android:background="@color/colorPrimary"
            android:textStyle="bold"/>

        <Button
            android:text="!Alerta!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:layout_weight="1"
            android:onClick="registroAlerta"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"

            android:textColor="@color/colorActivity"
            android:background="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ec.edu.upse.locatemev1.Controlador.usuarioTutoriadoControl.ubicacionUsuarioControl.MapsActivity" />
</LinearLayout>